--- a/index.html
+++ b/index.html
@@ -120,7 +120,9 @@
         <div class="title student">
           <h1>スクール生の声</h1>
         </div>
-<img class="center" src="img/voice.jpg" alt="スクール生の声" max-width:100%;>
+<div class="w100">
+          <img class="center" src="img/voice.jpg" alt="スクール生の声">
+        </div>
         <div class="container">
 
 <div class="purple"></div>
